[fix] B199 loginbox too small - solution by Johannes
git-svn-id: https://scm.mmbase.org/mmbase/trunk@17469 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/core/templates/css/loginpage.css
+++ b/contributions/didactor2/src/core/templates/css/loginpage.css
@@ -192,7 +192,7 @@ div.ListLeft {
   	width: 100%;
   	height: 18em;
   	padding: 0.5em 0.25em 0.5em 0.25em;
-	overflow: auto;
+	overflow: visible;
 	white-space: wrap;
 	background-color: #EEEEEE;
   	border-top: 1px solid #CCCCCC;
@@ -208,6 +208,13 @@ div.ListRight {
 	background-color: #EEEEEE;
   	border-top: 1px solid #CCCCCC;
   	border-bottom: 1px solid #CCCCCC }
+
+div.titlefield {
+	text-align: left;
+	overflow: visible;
+	white-space: normal;
+	width: 160px;
+}
 
 a.users:link,
 a.users:visited,
